# kage_mcp

./: CLAUDE.md  Cargo.toml  README.md
docs/: 基本設計書.md
docs/references/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md
src/: cli.rs  config.rs  detection.rs  error.rs  init.rs  lib.rs  main.rs  mcp.rs  paths.rs  registry.rs  scaffold.rs  status.rs  uninstall.rs  wiring.rs
src/mcp/: serve.rs  server.rs
src/wiring/: connection.rs  prompt.rs
templates/: ABOUTME.md  CLAUDE_trigger.md
