[package]
name = "kage_mcp"
version = "0.1.0"
edition = "2024"

# CLI は `kage`（§9）。ロジックは lib に置きテスト可能にする（§10 可搬性）。
[[bin]]
name = "kage"
path = "src/main.rs"

[lib]
name = "kage_mcp"
path = "src/lib.rs"

[dependencies]
# MCP 土台（§5-2: 自作しない）。transport-streamable-http-server で HTTP Streamable serve（§5-3）。
rmcp = { version = "2", features = ["server", "transport-streamable-http-server", "macros"] }
# 非同期ランタイム。rmcp/axum が前提。
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "fs", "io-util"] }
# StreamableHttpService を載せる HTTP サーバ配管（rmcp は axum を dev-dep にしか持たないため直接依存）。
axum = "0.8"
# CLI（§9 サブコマンド）。
clap = { version = "4", features = ["derive"] }
